--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-declare": "^0.3.0",
     "gulp-handlebars": "^4.0.0",
     "gulp-less": "^3.0.2",
+    "gulp-sourcemaps": "^1.5.1",
     "gulp-wrap": "^0.11.0"
   }
 }
