--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"barryvdh/laravel-ide-helper": "~2.0",
-		"phpmailer/phpmailer": "~5.2"
+		"phpmailer/phpmailer": "~5.2",
+		"h4cc/wkhtmltopdf-amd64": "0.12.2.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
