--- a/storage/.gitignore
+++ b/storage/.gitignore
@@ -1,4 +1,4 @@
 laravel.log
-/reports/New_Hires/
-/reports/Payroll/
-/reports/Separations/
+/reports/New_Hires/*
+/reports/Payroll/*
+/reports/Separations/*
