--- a/.env.live
+++ b/.env.live
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_DEBUG=true
+APP_DEBUG=false
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
@@ -9,3 +9,4 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
+wkhtmltopdf=/usr/local/bin/wkhtmltopdf
