--- a/.env.testlive
+++ b/.env.testlive
@@ -10,3 +10,6 @@ DB_PASSWORD=secret
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 wkhtmltopdf=/usr/local/bin/wkhtmltopdf
+
+MAIL_TO_OVERRIDE=rafael.gil@illy.com
+MAIL_TO_NAME_OVERRIDE='Local Server'
