--- a/.env.local
+++ b/.env.local
@@ -1,15 +1,15 @@
 APP_ENV=local
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_USERNAME=homesteadw
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-wkhtmltopdf=/usr/local/bin/wkhtmltopdf
+wkhtmltopdf=/usr/local/bin/wkhtmltopdf.sh
 
 MAIL_TO_OVERRIDE=rafael.gil@illy.com
 MAIL_TO_NAME_OVERRIDE='Local Server'
