--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 DB_DATABASE=homestead
-DB_USERNAME=homesteadw
+DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 CACHE_DRIVER=file
