newHire stable, Separation stable, done schedule system

--- a/.env.live
+++ b/.env.live
@@ -7,6 +7,11 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+LDAP_HOST=DCUSA2.ILLY-DOMAIN.COM
+LDAP_DOMAIN=ILLY-DOMAIN.COM
+LDAP_USER=adm_gilra
+LDAP_PASSWORD=R4f43lg1l
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 wkhtmltopdf=/usr/local/bin/wkhtmltopdf
