--- a/.env.stage
+++ b/.env.stage
@@ -1,11 +1,16 @@
-APP_ENV=testlive
-APP_DEBUG=false
+APP_ENV=stage
+APP_DEBUG=true
 APP_KEY=SomeRandomString
 
 DB_HOST=localhost
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+
+LDAP_HOST=DCUSA2.ILLY-DOMAIN.COM
+LDAP_DOMAIN=ILLY-DOMAIN.COM
+LDAP_USER=adm_gilra
+LDAP_PASSWORD=R4f43lg1l
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
