- date added to the Org change report in case more than one occurs - in routes allowed to get reports using - and _ characters - illy address doesn't end in a period, new users didn't have address, fixed - got sometimes auth errors, removed DNS DCUSA2.ILLY-DOMAIN.COM and enter IP 10.23.1.51 and it works so far

--- a/.env.local
+++ b/.env.local
@@ -8,10 +8,10 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-LDAP_HOST=DCUSA2.ILLY-DOMAIN.COM
-LDAP_DOMAIN=ILLY-DOMAIN.COM
+LDAP_HOST=10.23.1.51
 LDAP_USER=adm_gilra
 LDAP_PASSWORD=R4f43lg1l
+LDAP_DOMAIN=ILLY-DOMAIN.COM
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
