- domain controller updated for live

--- a/.env.live
+++ b/.env.live
@@ -7,7 +7,7 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-LDAP_HOST=DCUSA2.ILLY-DOMAIN.COM
+LDAP_HOST=USA-001-01DC001.ILLY-DOMAIN.COM
 LDAP_DOMAIN=ILLY-DOMAIN.COM
 LDAP_USER=adm_gilra
 LDAP_PASSWORD=R4f43lg1l
