--- a/.env.live
+++ b/.env.live
@@ -15,3 +15,7 @@ LDAP_PASSWORD=R4f43lg1l
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 wkhtmltopdf=/usr/local/bin/wkhtmltopdf
+
+
+MAIL_TO_OVERRIDE=rafael.gil@illy.com
+MAIL_TO_NAME_OVERRIDE='Local Server'
