- issue not creating reports in pdf: fixed

--- a/.env.live
+++ b/.env.live
@@ -14,7 +14,7 @@ LDAP_PASSWORD=R4f43lg1l
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-wkhtmltopdf=/usr/local/bin/wkhtmltopdf
+wkhtmltopdf=/usr/local/bin/wkhtmltopdf.sh
 
 
 MAIL_TO_OVERRIDE=rafael.gil@illy.com
