- office manager added to the notifications

--- a/.env.live
+++ b/.env.live
@@ -9,8 +9,8 @@ DB_PASSWORD=secret
 
 LDAP_HOST=10.44.0.19
 LDAP_DOMAIN=ILLY-DOMAIN.COM
-LDAP_USER=adm_gilra
-LDAP_PASSWORD=R4f43lg1l
+LDAP_USER=adm_na-services
+LDAP_PASSWORD=C3rv3c3r14p4n4m4
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
