--- a/.env.local
+++ b/.env.local
@@ -9,13 +9,14 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 LDAP_HOST=10.44.0.19
-LDAP_USER=adm_gilra
-LDAP_PASSWORD=R4f43lg1l
 LDAP_DOMAIN=ILLY-DOMAIN.COM
+LDAP_USER=admin
+LDAP_PASSWORD=password
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-wkhtmltopdf=/usr/local/bin/wkhtmltopdf.sh
+#wkhtmltopdf=/usr/local/bin/wkhtmltopdf.sh
+wkhtmltopdf=wkhtmltopdf
 
-MAIL_TO_OVERRIDE=rafael.gil@illy.com
+MAIL_TO_OVERRIDE=rafaelgil83@gmail.com
 MAIL_TO_NAME_OVERRIDE='Local Server'
