- update environment settings

--- a/.env.live
+++ b/.env.live
@@ -14,8 +14,7 @@ LDAP_PASSWORD=password
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-#wkhtmltopdf=/usr/local/bin/wkhtmltopdf.sh
-wkhtmltopdf=wkhtmltopdf
+wkhtmltopdf=/usr/local/bin/wkhtmltopdf.sh
 
 
 MAIL_TO_OVERRIDE=rafaelgil83@gmail.com
